<resources>
    <string name="app_name">Side Hustle</string>
    <string name="image_logo">Image Logo</string>
    <string name="find_your_perfect_part_time_job">Find Your Perfect Part-Time Job!</string>
    <string name="home">Home</string>
    <string name="search_for_jobs">Search for jobs</string>
    <string name="tutoring">Tutoring</string>
    <string name="freelance">Freelance</string>
    <string name="internships">Internships</string>
    <string name="featured_jobs">Featured Jobs</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="search_icon">Search Icon</string>
    <string name="categories">Categories</string>
    <string name="part_time">Part-time</string>
    <string name="gigs">Gigs</string>
    <string name="view_all">View All</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="no_saved_jobs">You haven\'t saved any jobs yet</string>
    <string name="profile">Profile</string>
    <string name="splash_catchphrase">Find flexible jobs that fit your schedule and skills. Start earning on your terms today!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="personal_details">Personal</string>
    <string name="skills">Skills</string>
    <string name="work_experience">Experience</string>
    <string name="settings">Settings</string>
    <string name="profile_name">User Profile</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="job_details">Job Details</string>
    <string name="company_logo">Company logo</string>
    <string name="job_description">Job Description</string>
    <string name="requirements">Requirements</string>
    <string name="apply_now">Apply Now</string>
    <string name="save_job">Save Job</string>
    <string name="clear_search">Clear search</string>
    <string name="no_search_results">No Results Found</string>
    <string name="try_different_keywords">Try different keywords or search criteria</string>
    <string name="type_to_search">Type to search for jobs</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="not_provided">Not provided</string>
    <string name="not_available">N/A</string>
</resources>