<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="204dp"
        android:layout_height="199dp"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/logo"
        android:translationY="-30dp"
        app:layout_constraintBottom_toTopOf="@id/tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/find_your_perfect_part_time_job"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/catchphrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/catchphrase"
        android:layout_width="357dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/splash_catchphrase"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagline"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>
